# cryptopad

./: .gitignore  CMakeLists.txt  ENCRYPTION_FORMAT.html  FORMAT_en.md  FORMAT_fr.md  README.md
.github/workflows/: build.yml
cmake/: FindBotan.cmake
share/archlinux_pkgbuild/: PKGBUILD  PKGBUILD-AppImage  PKGBUILD-AppImage.in  PKGBUILD-git  PKGBUILD.in
share/linux/: cryptopad.desktop
share/windows/: icon.rc  installer.iss  installer.nsi
src/: codeeditor.cpp  codeeditor.h  colorpickerdialog.cpp  colorpickerdialog.h  colorpickerpopup.cpp  colorpickerpopup.h  cryptomanager.cpp  cryptomanager.h  fileencryptor.cpp  fileencryptor.h  filteredfontcombobox.cpp  filteredfontcombobox.h  main.cpp  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  syntaxhighlighter.cpp  syntaxhighlighter.h
tests/: test_cryptomanager.cpp  test_fileencryptor.cpp
